[tool.poetry]
name = "internal"
version = "0.1.0"
description = ""
authors = ["Mikhail Grigoriev <mgrigoriev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.2"
python-dotenv = "^1.0.1"
dj-database-url = "^2.3.0"
psycopg = "^3.2.3"
gunicorn = "^23.0.0"
whitenoise = "^6.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
